--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       layer.bindPopup(feature.properties.Title);
     }
    });
-   var runLayer = omnivore.csv('data-cap.csv', null, customLayer)
+   var runLayer = omnivore.csv('data.csv', null, customLayer)
    .on('ready', function() {
     map.fitBounds(runLayer.getBounds());
    }).addTo(map);
