--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 
   /* Set up the map with initial center and zoom level */
   var map = L.map('map', {
-    center: [24.453884, 	54.3773438], // EDIT latitude, longitude to re-center map
+    center: [51.5073509, 	-0.1277583], // EDIT latitude, longitude to re-center map
     zoom: 12,  // EDIT from 1 to 18 -- decrease to zoom out, increase to zoom in
     scrollWheelZoom: false
   });
 
+    	
   /* Control panel to display map layers */
    var controlLayers = L.control.layers( null, null, {
    position: "topright",
