--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   /* Set up the map with initial center and zoom level */
   var map = L.map('map', {
-    center: [41.7486373, 	-72.6928403], // EDIT latitude, longitude to re-center map
+     center: [41.77, -72.69], // EDIT latitude, longitude to re-center map
     zoom: 12,  // EDIT from 1 to 18 -- decrease to zoom out, increase to zoom in
     scrollWheelZoom: false
   });
